# WaterScarcity.Hackathon

./: .gitignore  README.md  a.4.single_scenario_baseline.ipynb  best_params.csv  evol_visualization.ipynb  exec_result.csv  lucas_multi_scenarios.ipynb  lucas_single_scenario.ipynb  lucas_single_scenario_evol.ipynb  lucas_single_scenario_fixed.ipynb  lucas_single_scenario_matrix.ipynb  lucas_single_scenario_random.ipynb  lucas_single_scenario_reexec_v1.1.ipynb  lucas_single_scenario_reexec_v1.3.ipynb  lucas_single_scenario_v2.ipynb  multi_scenarios.ipynb  multi_scenarios_fixed_v1.2.ipynb  multi_scenarios_high_coop.ipynb  multi_scenarios_old.ipynb  multi_scenarios_tuned.ipynb  multi_scenarios_tuned_v1.1.ipynb  multi_scenarios_tuned_v1.2.ipynb  multi_scenarios_tuned_v1.2_no_incentive.ipynb  multi_scenarios_tuned_v1.3.ipynb  pyproject.toml  requirements.txt  results_cumul_v1.2_no_incentive_df.csv  results_delete_df.csv  results_df.csv  single_scenario.ipynb  single_scenario_high_coop.ipynb  single_scenario_old.ipynb  test.py
dataset/: README.md
multi_exec/: results_cumul_df.csv  results_cumul_v1.3_df.csv
optimization_results/: best_ind_scenario_0.csv  best_ind_scenario_1.csv  best_ind_v1.1_scenario_1.csv
parameters/: data.csv
parameters/actors/: A-b1.yml  A-b2.yml  A-v1.yml  A2.yml  I-b1.yml  I-v2.yml  L-v1.yml
parameters/scenarios/: 1-b.yml  1.yml
phase_one_waterflow_prediction_machine_learning/: requirements.txt
phase_two_game_theroy_genetic_optimization/: README.md  a.1.single_scenario_custom_linear.ipynb  a.2.single_scenario_custom_logistic.ipynb  a.3.single_scenario_custom_exponential.ipynb  a.5.single_scenario_high_coop.ipynb  b.1.multi_scenarios_custom_linear.ipynb  b.2multi_scenarios_custom_logisitc.ipynb  b.3.multi_scenarios_custom_exponential.ipynb  b.4.multi_scenarios_baseline.ipynb  b.5.multi_scenarios_high_coop.ipynb  requirements.txt
phase_two_game_theroy_genetic_optimization/multi_exec_results/: results_baseline_2_df.csv  results_cumul_exponential_df.csv  results_cumul_linear_df.csv  results_final_exponential_generalization.csv  results_high_coop_df.csv
phase_two_game_theroy_genetic_optimization/optimization_results/: best_ind_custom_exponential_scenario_0.csv  best_ind_custom_exponential_scenario_1.csv  best_ind_custom_linear_scenario_0.csv  best_ind_custom_linear_scenario_1.csv  best_ind_custom_logisitc_scenario_0.csv  best_ind_custom_logisitc_scenario_1.csv
phase_two_game_theroy_genetic_optimization/src/: __init__.py  actors.py  ecology.py  plot_analysis.py  plot_multi_analysis.py  policies.py  tuned_policies.py  utils.py  (+3 more)
src/: actors.py  core.py  cumul_func_v1.2.py  ecology.py  optim.py  plot_analysis.py  plot_multi_analysis.py  scenarios.py  water_allocation.py
(+110 files in other folders)
