[project]
name = "water-scarcity-hackathon"
version = "0.1.0"
description = "Code for probabilistic streamflow forecasting and water-allocation policy optimization developed for the Capgemini Invent 2025 Water Scarcity Hackathon."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Lucas Chapuis" },
  { name = "Antoine Azar" }
]
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
phase1 = [
  "python-dotenv==1.0.1",
  "xarray==2024.7.0",
  "rioxarray==0.18.1",
  "cftime==1.6.4.post1",
  "dask[dataframe]==2024.8.0",
  "Cartopy==0.23.0",
  "cdsapi==0.7.2",
  "h5netcdf==1.3.0",
  "matplotlib==3.9.2",
  "seaborn==0.13.2",
  "scipy==1.15.0",
  "plotly==5.24.1",
  "Pygments==2.18.0",
  "osmnx==2.0.1",
  "scikit-learn==1.5.2",
  "folium==0.18.0",
  "geopy==2.4.1",
  "nbformat>=4.2.0",
  "rasterio==1.4.2",
  "pandas_access==0.0.1",
  "sqlalchemy==2.0.36",
  "OWSLib==0.31.0",
  "shap==0.46.0",
  "lightgbm==4.5.0",
  "mapie==0.9.1",
  "quantile-forest==1.3.11",
  "tensorflow==2.18.0",
  "papermill==2.6.0",
  "ipywidgets==8.1.5",
  "interpret==0.6.9",
  "tabulate==0.9.0",
  "xgboost-cpu==3.0.0",
  "statsmodels==0.14.4",
  "codecarbon==3.0.1"
]

phase2 = [
  "asttokens==3.0.0",
  "attrs==25.3.0",
  "colorama==0.4.6",
  "comm==0.2.2",
  "contourpy==1.3.2",
  "cycler==0.12.1",
  "debugpy==1.8.14",
  "decorator==5.2.1",
  "executing==2.2.0",
  "fastjsonschema==2.21.1",
  "fonttools==4.57.0",
  "ipykernel==6.29.5",
  "ipython==9.2.0",
  "ipython_pygments_lexers==1.1.1",
  "jedi==0.19.2",
  "joblib==1.4.2",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2025.4.1",
  "jupyter_client==8.6.3",
  "jupyter_core==5.7.2",
  "kiwisolver==1.4.8",
  "matplotlib==3.9.2",
  "matplotlib-inline==0.1.7",
  "narwhals==1.37.1",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "numpy==2.2.5",
  "packaging==25.0",
  "pandas==2.2.3",
  "parso==0.8.4",
  "pillow==11.2.1",
  "platformdirs==4.3.7",
  "plotly==6.0.1",
  "prompt_toolkit==3.0.51",
  "psutil==7.0.0",
  "pure_eval==0.2.3",
  "Pygments==2.19.1",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "PyYAML==6.0.2",
  "pyzmq==26.4.0",
  "referencing==0.36.2",
  "rpds-py==0.24.0",
  "scikit-learn==1.6.1",
  "scipy==1.15.2",
  "seaborn==0.13.2",
  "six==1.17.0",
  "stack-data==0.6.3",
  "threadpoolctl==3.6.0",
  "tornado==6.4.2",
  "traitlets==5.14.3",
  "typing_extensions==4.13.2",
  "tzdata==2025.2",
  "wcwidth==0.2.13",
  "pywin32==310; platform_system == 'Windows'"
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"